feat: Updated the orders api's and updated the documentation
